[Feat] Fixed blob overflow issues
Resolved issues with blob blur scaling and blob overflowing.

--- a/apps/fmi-codes-site/components/background-blob/background-blob.module.scss
+++ b/apps/fmi-codes-site/components/background-blob/background-blob.module.scss
@@ -14,15 +14,21 @@
 
 .blob {
   animation: rotate 10s linear infinite;
-  @apply h-64 aspect-square absolute inset-1/2 rounded-full;
+  @apply h-96 aspect-square absolute inset-1/2 rounded-full;
   @apply bg-gradient-to-r from-red-600 to-blue-600;
   translate: -50% -50%;
   z-index: -2;
 }
 
 .blur {
-  @apply w-full h-full absolute top-0 left-0;
+  @apply relative w-full h-full absolute top-0 left-0;
 
   z-index: -1;
   backdrop-filter: blur(12.5rem);
 }
+
+.container {
+  @apply fixed w-screen h-screen overflow-hidden;
+  z-index: -2;
+}
+
