--- a/apps/fmi-codes-site/styles/globals.css
+++ b/apps/fmi-codes-site/styles/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  @apply bg-black text-white overflow-hidden;
+  @apply bg-black text-white overflow-x-hidden;
 }
 
 a {
